Part2/playbooks/manifests/app3.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: traefik/whoami:v1.10
          # image: nginxdemos/hello
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: default
spec:
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
